fix not centered content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import vinyl from "../assets/images/vinyl.png";
 	>
 		<div class="w-full flex flex-col items-center px-12">
 			<h1
-				class="text-white text-4xl font-black self-center whitespace-nowrap mt-24 max-md:mt-10"
+				class="text-white text-4xl font-black self-center whitespace-nowrap "
 			>
 				Midnight Pill
 			</h1>
