Fix some titles styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,19 +9,19 @@ import vinyl from "../assets/images/vinyl.png";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Midnight Pill Band Oficial</title>
 	</head>
 	<body
 		class="h-screen flex flex-col justify-center items-center bg-gradient-to-b from-[#EE048B] via-[#570F39] to-black"
 	>
-		<div class="w-full flex flex-col items-center px-12">
+		<div class="w-full flex flex-col items-center">
 			<h1
-				class="text-white text-4xl font-black self-center whitespace-nowrap "
+				class="text-white text-4xl font-black"
 			>
 				Midnight Pill
 			</h1>
 			<h2
-				class="text-stone-300 text-2xl self-center whitespace-nowrap mt-1"
+				class="text-pink-300 text-2xl self-center"
 			>
 				Coming soon
 			</h2>
